# superglue

./: .gitignore  .python-version  .test.env  CHANGELOG.md  MANIFEST.in  README.md  TODO.txt  makefile  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml  release.yml  test-and-lint.yml
docs/: conf.py  index.rst
glued/: __main__.py
glued/cli/: __init__.py  debug.py  helpers.py  job.py  module.py  project.py  shared.py  validation.py  validaton_actions.py  version.py
glued/core/: base_file_controller.py  job.py  module.py  project.py  templating.py
glued/environment/: __init__.py  variables.py
glued/helpers/: cli.py
glued/src/: base_file_controller.py  job.py  logger_factory.py  module.py  project.py  templating.py
glued/templates/: job_config.template.yml  project_config.template.yml
requirements/: development.txt  distribution.txt
superglue/: __main__.py
superglue/cli/: __init__.py  base.py  command.py  commands.py  job.py  messages.py  module.py  project.py  root.py  utils.py  validation.py  version.py
superglue/core/: _project.py  base_file_controller.py  fileio.py  job.py  module.py  project.py
superglue/environment/: config.py  variables.py
superglue/exceptions/: __init__.py
superglue/helpers/: cli.py
superglue/templates/: conftest.template.py  job_config.template.yml  job_test.template.py.txt  jobs_init.template.py  main.template.py  makefile  module_init.template.py  module_test.template.py  module_test.template.py.txt  template.env  template.gitignore
superglue/utils/: cli.py
tests/: __init__.py  pytest.ini
(+21 files in other folders)
