[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "superglue"
version = "0.10.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"python-dotenv==0.20.0",
	"pyaml==21.10.1",
	"boto3==1.20.49",
	"Jinja2==3.0.3",
	"prettytable==3.5.0"
]

[project.optional-dependencies]
dev = [
	"setuptools==63.1.0",
	"build==0.8.0",
	"python-semantic-release==7.29.4",
	"pytest==7.1.2",
	"black==22.6.0",
	"pytest-dotenv==0.5.2"
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[project.scripts]
superglue = "superglue.__main__:main"


[tool.semantic_release]
version_variable = "superglue/cli/commands.py:__version__"
version_toml = "pyproject.toml:project.version"
version_pattern = "README.md:VERSION {version}"
upload_to_pypi = true

[tool.black]
line_length = 120
